# tobavala

./: README.md  httpsbridge.py  httptes  httptes.vala  meson.build  org.example.App.json  tesglobal  tesglobal.vala  your_program  your_program.vala
builddir/meson-info/: meson-info.json
builddir/meson-logs/: meson-log.txt
data/: org.example.App.desktop.in  org.example.App.gschema.xml
nrbackendLocalnr/: main.py
po/: meson.build
src/: application.vala  blankgtk.gresource.xml  main.vala  meson.build  window.ui  window.vala
src/assets/: login.css  songAns.css  songGrade.css  songcard.css  style.css  userBox.css
src/controllers/: AccountData.vala  Leaderboard.vala  SongGrade.vala  SongSection.vala  StartSong.vala  tes.vala
src/functionality/: Http.vala  Jsonizer.vala  Routes.vala  http.vala
src/screens/: LeaderBoard.vala  SongAns.vala  SongGrade.vala  SongSection.vala  home.vala  login.vala  register.vala
src/ui/screens/: home.ui  leaderBoard.ui  login.ui  register.ui  songAns.ui  songGrade.ui  songsection.ui
src/ui/widget/: buttonFinish.ui  cardHome.ui  entryLogin.ui  entryRegister.ui  formLogin.ui  formRegister.ui  gradeBox.ui  labelHome.ui  labelLogin.ui  labelRegister.ui  progressHome.ui  resultBox.ui  songCard.ui  songCard2.ui  songForm.ui  submitLogin.ui  submitRegister.ui  userbox.ui
src/widget/: buttonAla.vala  buttonFinish.vala  cardHome.vala  entryLogin.vala  entryRegister.vala  formLogin.vala  formRegister.vala  gradeBox.vala  labelHome.vala  labelLogin.vala  labelRegister.vala  progressHome.vala  resultBox.vala  songCard-looksOnly.vala  songCard.vala  songForm.vala  submitLogin.vala  submitRegister.vala  userBox.vala
